# grapefruit

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  python_scripts_down.sh  python_scripts_up.sh  test_state_space.yaml
benchmark/: bench_preference_planner_grid_robot.py  (+15 more)
examples/: CMakeLists.txt  ConditionExample.cpp  GraphExample.cpp  GraphTest.cpp  SpotTest.cpp  StateExample.cpp  StateSpaceExample.cpp  TEMPLATE_graph_test.cpp  TransitionSystemExample.cpp  YAMLExample.cpp  YAMLTest.cpp  add_delete_nodes.cpp  create_game.cpp  create_transition_system.cpp  file_read.cpp  graph_eval.cpp  graph_test.cpp  lex_set_comp.cpp  test_label_logic.cpp  test_risk_values.cpp
examples/core/: AutomatonExample.cpp  CMakeLists.txt  ConditionExample.cpp  DAGExample.cpp  GraphExample.cpp  ProductProjectionExample.cpp  StateExample.cpp  StateSpaceExample.cpp  SymbolicProductAutomatonExample.cpp  TransitionSystemExample.cpp  YAMLExample.cpp
examples/graph_search/: AStarExample.cpp  BOAStarExample.cpp  BODijkstraExample.cpp  CMakeLists.txt  DijkstraExample.cpp  GraphSearchExample.cpp  MODijkstraExample.cpp  MO_BOAStarExample.cpp  MO_BODijkstraExample.cpp  MO_DijkstraExample.cpp  SO_AStarExample.cpp  SO_DijkstraExample.cpp
examples/misc/: ArgParserExample.cpp  CMakeLists.txt  GridWorldConfigExample.cpp  Misc.cpp  TypeGenericArrayExample.cpp
examples/planners/: BOPreferencePlannerExample.cpp  CMakeLists.txt  DeterministicTaskPlannerExample.cpp  MCTGExample.cpp  MOPreferencePlannerExample.cpp
examples/statistics/: CMakeLists.txt  GaussianUpdaterExample.cpp
include/: .symbSearch.cpp.swo  .transitionSystem.cpp.swo  CMakeLists.txt  TEMPLATE_graph.cpp  TEMPLATE_graph.h  astar.cpp  astar.h  automaton.cpp  automaton.h  benchmark.cpp  benchmark.h  condition.cpp  condition.h  edge.cpp  edge.h  evolSearch.cpp  evolSearch.h  graph.cpp  graph.h  lexSet.cpp  lexSet.h  state.cpp  state.h  stateSpace.cpp  stateSpace.h  symbSearch.cpp  symbSearch.h  transitionSystem.cpp  transitionSystem.h
include/base/: condition.cpp  game.cpp  graph.cpp  mockGamePlay.cpp  state.cpp  stateSpace.cpp  transitionSystem.cpp
include/headers/: benchmark.h  condition.h  game.h  generalPlanner.h  graph.h  lexSet.h  mockGamePlay.h  orderedPlanner.h  state.h  stateSpace.h  stratSynthesis.h  symbSearch.h  transitionSystem.h  writeToFile.h
include/preference/: lexSet.cpp  symbSearch.cpp
include/research/: generalPlanner.cpp  lexSet.cpp  orderedPlanner.cpp  stratSynthesis.cpp  symbSearch.cpp
include/tools/: benchmark.cpp  mockGamePlay.cpp  writeToFile.cpp
pref_include/: CMakeLists.txt  lexSet.cpp  lexSet.h  symbSearch.cpp  symbSearch.h
src/: CMakeLists.txt  ordered_planner_grid_robot.cpp  ordered_planner_grid_robot_NAMOA.cpp  ordered_planner_grid_robot_boa.cpp  ordered_planner_grid_robot_resource_collection.cpp  ordered_planner_grid_robot_sum_delay.cpp  preference_planner.cpp  preference_planner_grid_robot.cpp  preference_planner_manipulator.cpp  risk_avoid_grid_robot.cpp  risk_avoid_manipulator.cpp  risk_avoid_rogue_agent.cpp  risk_mitigation_grid_robot.cpp  risk_mitigation_manipulator.cpp  tp_test.cpp
src/core/: Automaton.h  CMakeLists.txt  Condition.cpp  Condition.h  Graph.h  State.cpp  State.h  StateSpace.cpp  StateSpace.h  SymbolicProductAutomaton.h  SymbolicProductAutomaton_impl.hpp  TransitionSystem.cpp  TransitionSystem.h  game.cpp  state.cpp  stateSpace.h
src/dep_tools/: writeToFile.cpp
src/graph_search/: AStar.h  BOAStar.h  MultiObjectiveSearchProblem.h  NAMOAStar.h  SearchProblem.h  SymbolicSearchProblem.h
src/headers/: mockGamePlay.h  orderedPlanner.h  symbSearch.h
src/models/: CMakeLists.txt  GridWorldAgent.cpp  Manipulator.cpp  Manipulator.h
src/pareto_reinforcement_learning/: Animator.h  Behavior.h  BehaviorCriteria.h  BehaviorHandler.h  Benchmark.h  CMakeLists.txt  DataCollector.h  EFE.h  HistoryNode.h  Learner.h  Misc.h  PRL.h  PRLGridWorldAgent.cpp  PRLGridWorldAgentBenchmark.cpp  PRLGridWorldAgentFixedEnvBenchmark.cpp  PRLGridWorldAgentRandDistBenchmark.cpp  PRLSearchProblem.h  ParetoAIRL.cpp  ParetoAIRLSearchProblem.h  Quantifier.h  RandomGridWorldGenerator.h  Regret.h  SearchProblem.h  Storage.h  TrajectoryDistributionEstimator.h  TrueBehavior.h
src/pareto_reinforcement_learning/efe_approx/: Benchmark.h  BenchmarkEFE.cpp  CMakeLists.txt  CalculateEFE.cpp  EFEBenchmark.py  FakePlanGenerator.cpp
src/pareto_reinforcement_learning/scenarios/mars_rover/: animation.yaml  config.yaml  config_2.yaml  config_bias_debug_big_var.yaml  config_bias_debug_med_var.yaml  config_bias_debug_small_var.yaml  data.yaml  formulas.yaml  launch_benchmark.sh  launch_benchmark_debug.sh  launch_benchmark_fixed_env.sh  launch_benchmark_rand_dist.sh  launch_debug_benchmark.sh  launch_rand_env_search.sh  old_config.yaml  random_config.yaml  random_config_big_var.yaml  random_config_big_var_pev_close.yaml  random_config_big_var_pev_far.yaml  random_config_med_var.yaml  random_config_med_var_pev_close.yaml  random_config_med_var_pev_far.yaml  random_config_no_var.yaml  random_config_no_var_pev_close.yaml  random_config_no_var_pev_far.yaml  random_config_small_var.yaml  random_config_small_var_pev_close.yaml  random_config_small_var_pev_far.yaml
src/pareto_reinforcement_learning/scenarios/mining_robot/: animation.yaml  config.yaml  formulas.yaml  pf.yaml
src/planners/: BOActionCostPreferencePlanner.cpp  BOPartialSatisfactionPreferencePlanner.cpp  BOPreferencePlanner.h  BOPreferencePlannerSearchProblem.h  BOPreferencePlanner_impl.hpp  CMakeLists.txt  DeterministicTaskPlanner.cpp  DeterministicTaskPlanner.h  MOPreferencePlanner.cpp  PlanningProblem.h  PreferenceCostObjective.h  PreferenceCostObjectivePlugins.h
src/research/: generalPlanner.cpp  stratSynthesis.cpp  symbSearch.cpp
src/search/: SearchObject.h
src/theory/: PartialSatisfactionAutomaton.h
src/tools/: Algorithms.h  Containers.h  Logging.h
test/src/: CMakeLists.txt  graph_test.cpp  test_create_pareto_front.cpp  test_label_logic.cpp  test_preference_planner_grid_robot_heuristic.cpp  test_symbolic_methods.cpp
(+330 files in other folders)
